# python-ucsfbids

./: .cookiecutter.json  .gitignore  CODE_OF_CONDUCT.rst  CONTRIBUTING.rst  LICENSE.rst  README.rst  bids-import.py  conftest.py  noxfile.py  pyproject.toml  setup.py  trace.txt  upenn-export.py
.github/workflows/: tests.yml
docs/: conf.py  index.rst  reference.rst  usage.rst
src/templatepackage/: header.py
src/ucsfbids/: __init__.py  header.py
src/ucsfbids/base/: __init__.py  basebidsdirectory.py  baseexporter.py  baseimporter.py
src/ucsfbids/datasets/: __init__.py  dataset.py
src/ucsfbids/datasets/exporters/: __init__.py  datasetbidsexporter.py  datasetupennexporter.py
src/ucsfbids/datasets/importers/: __init__.py  datasetbidsimporter.py  datasetimporter.py
src/ucsfbids/datasets/importers/enigma/: __init__.py  datasetenigmaimporter.py
src/ucsfbids/datasets/importers/pia/: __init__.py  datasetpiaimporter.py
src/ucsfbids/exporters/: __init__.py  datasetexporter.py  modalityexporter.py  sessionexporter.py  subjectexporter.py
src/ucsfbids/exporters/bids/: __init__.py  anatomybidsexporter.py  ctbidsexporter.py  datasetbidsexporter.py  ieegbidsexporter.py  modalitybidsexporter.py  sessionbidsexporter.py  subjectbidsexporter.py
src/ucsfbids/exporters/upenn/: __init__.py  _datasetpiaimporter.py  _datasetupennexporter.py  anatomyupennexporter.py  ctupennexporter.py  ieegupennexporter.py  sessionupennimplantexporter.py  sessionupennpreimplantexporter.py  subjectupennexporter.py
src/ucsfbids/importers/: __init__.py  datasetimporter.py  modalityimporter.py  sessionimporter.py  subjectimporter.py
src/ucsfbids/importers/dwi/: __init__.py
src/ucsfbids/importers/file/: __init__.py  functions.py
src/ucsfbids/importers/pia/: __init__.py  anatomypiaimporter.py  ctpiaimporter.py  datasetpiaimporter.py  ieegpiaimporter.py  sessionpiaimporter.py  subjectpiaimporter.py
src/ucsfbids/importspec/: __init__.py  filespec.py  modalityspec.py  sessionspec.py
src/ucsfbids/modalities/: __init__.py  anatomy.py  ct.py  dti.py  dwi.py  ieeg.py  ieegcdfs.py  modality.py
src/ucsfbids/modalities/anatomy/: __init__.py  anatomy.py
src/ucsfbids/modalities/ct/: __init__.py  ct.py
src/ucsfbids/modalities/dwi/: __init__.py  dwi.py
src/ucsfbids/modalities/exporters/: __init__.py  anatomybidsexporter.py  anatomyupennexporter.py  ctbidsexporter.py  ctupennexporter.py  ieegbidsexporter.py  ieegupennexporter.py  modalitybidsexporter.py  modatilybidsexporter.py
src/ucsfbids/modalities/ieeg/: __init__.py  ieeg.py  ieegcdfs.py
src/ucsfbids/modalities/ieeg/components/: __init__.py  ieegcdfs.py
src/ucsfbids/modalities/importers/: __init__.py  importspec.py  modalitybidsimporter.py  modalityimporter.py
src/ucsfbids/modalities/importers/base/: __init__.py  anatomybidsimporter.py  anatomyimporter.py  ctbidsimporter.py  ctimporter.py  dtiimporter.py  dwiimporter.py  ieegbidsimporter.py  ieegimporter.py
src/ucsfbids/modalities/importers/enigma/: __init__.py  anatomyenigmaimporter.py  ctenigmaimporter.py  dtienigmaimporter.py  dwienigmaimporter.py
src/ucsfbids/modalities/importers/pia/: __init__.py  anatomypiaimporter.py  ctpiaimporter.py  ieegpiaimporter.py
src/ucsfbids/sessions/: __init__.py  basesession.py  cdfssession.py  session.py
src/ucsfbids/sessions/exporters/: __init__.py  sessionbidsexporter.py  sessionupennimplantexporter.py  sessionupennpreimplantexporter.py
src/ucsfbids/sessions/importers/: __init__.py  sessionbidsimporter.py  sessionimporter.py
src/ucsfbids/sessions/importers/enigma/: __init__.py  sessionenigmaimporter.py
src/ucsfbids/sessions/importers/pia/: __init__.py  sessionbidsimporter.py  sessionpiaimporter.py
src/ucsfbids/subjects/: __init__.py  basesubject.py  subject.py
src/ucsfbids/subjects/exporters/: __init__.py  bidssubjectexporter.py  subjectbidsexporter.py  subjectupennexporter.py
src/ucsfbids/subjects/importers/: __init__.py  subjectbidsexporter.py  subjectbidsimporter.py  subjectimporter.py
(+4 files in other folders)
